[package]
name = "wacom-magnet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde_json = "1"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Graphics_Dwm",
]
